crates/ignis_codegen_c/tests/snapshots/golden_c__c_builtin_eq_enum_instance.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Status Status;

// Type definitions
struct Status {
    u32 tag;
};
#define Status_READY 0
#define Status_ERROR 1

boolean Status_equals(struct Status* self, struct Status* other);
static boolean same_ref_Status_ref_Status_bool(struct Status* left, struct Status* right);
static void __ignis_user_main(void);

#line 10 "test.ign"
boolean Status_equals(struct Status* self, struct Status* other) {
    // Locals
    struct Status* l0; // self
    struct Status* l1; // other

    // Temporaries
    struct Status* t0;
    struct Status* t1;

entry_0:
    l0 = self;
    l1 = other;
    return true;
}

#line 92 "<generated-c>"

#line 15 "test.ign"
static boolean same_ref_Status_ref_Status_bool(struct Status* left, struct Status* right) {
    // Locals
    struct Status* l0; // left
    struct Status* l1; // right

    // Temporaries
    struct Status* t0;
    struct Status* t1;
    struct Status* t2;
    struct Status* t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = Status_equals(t2, t3);
    return t4;
}

#line 116 "<generated-c>"

#line 19 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    struct Status l0; // left
    struct Status l1; // _
    struct Status l2; // right
    struct Status l3; // _
    boolean l4; // _same

    // Temporaries
    struct Status* t0;
    struct Status t1;
    struct Status* t2;
    struct Status t3;
    struct Status* t4;
    struct Status* t5;
    boolean t6;

entry_0:
    t0 = &l1;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->tag = 0;
    t1 = l1;
    l0 = t1;
    t2 = &l3;
    __builtin_memset((void*)t2, 0, sizeof(*t2));
(t2)->tag = 1;
    t3 = l3;
    l2 = t3;
    t4 = &l0;
    t5 = &l2;
    t6 = same_ref_Status_ref_Status_bool(t4, t5);
    l4 = t6;
    return;
}

#line 154 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
