crates/ignis_codegen_c/tests/snapshots/golden_c__c_builtin_eq_generic_enum_instance.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Status Status;
typedef struct Option____Status Option____Status;

// Type definitions
struct Status {
    u32 tag;
};
#define Status_READY 0
struct Option____Status {
    u32 tag;
    union {
        struct {
            struct Status field_0;
        } variant_1;
    } payload;
};
#define Option____Status_NONE 0
#define Option____Status_SOME 1

static boolean same_ref_Option__Status_ref_Option__Status_bool(struct Option____Status* left, struct Option____Status* right);
static void __ignis_user_main(void);
boolean Option____Status____equals(struct Option____Status* self, struct Option____Status* other);

#line 24 "test.ign"
static boolean same_ref_Option__Status_ref_Option__Status_bool(struct Option____Status* left, struct Option____Status* right) {
    // Locals
    struct Option____Status* l0; // left
    struct Option____Status* l1; // right

    // Temporaries
    struct Option____Status* t0;
    struct Option____Status* t1;
    struct Option____Status* t2;
    struct Option____Status* t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = Option____Status____equals(t2, t3);
    return t4;
}

#line 108 "<generated-c>"

#line 28 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    struct Option____Status l0; // left
    struct Option____Status l1; // _
    struct Status l2; // _
    struct Option____Status l3; // right
    struct Option____Status l4; // _
    struct Status l5; // _
    boolean l6; // _same

    // Temporaries
    struct Status* t0;
    struct Status t1;
    struct Option____Status* t2;
    struct Option____Status t3;
    struct Status* t4;
    struct Status t5;
    struct Option____Status* t6;
    struct Option____Status t7;
    struct Option____Status* t8;
    struct Option____Status* t9;
    boolean t10;

entry_0:
    t0 = &l2;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->tag = 0;
    t1 = l2;
    t2 = &l1;
    __builtin_memset((void*)t2, 0, sizeof(*t2));
(t2)->tag = 1;
    (t2)->payload.variant_1.field_0 = t1;
    t3 = l1;
    l0 = t3;
    t4 = &l5;
    __builtin_memset((void*)t4, 0, sizeof(*t4));
(t4)->tag = 0;
    t5 = l5;
    t6 = &l4;
    __builtin_memset((void*)t6, 0, sizeof(*t6));
(t6)->tag = 1;
    (t6)->payload.variant_1.field_0 = t5;
    t7 = l4;
    l3 = t7;
    t8 = &l0;
    t9 = &l3;
    t10 = same_ref_Option__Status_ref_Option__Status_bool(t8, t9);
    l6 = t10;
    return;
}

#line 162 "<generated-c>"

#line 19 "test.ign"
boolean Option____Status____equals(struct Option____Status* self, struct Option____Status* other) {
    // Locals
    struct Option____Status* l0; // self
    struct Option____Status* l1; // other

    // Temporaries
    struct Option____Status* t0;
    struct Option____Status* t1;

entry_0:
    l0 = self;
    l1 = other;
    return true;
}

#line 180 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
