crates/ignis_codegen_c/tests/snapshots/golden_c__c_builtin_eq_generic_record_instance.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Status Status;
typedef struct Wrapper____Status Wrapper____Status;

// Type definitions
struct Status {
    u32 tag;
};
#define Status_READY 0
struct Wrapper____Status {
    struct Status field_0;
};

static boolean same_ref_Wrapper__Status_ref_Wrapper__Status_bool(struct Wrapper____Status* left, struct Wrapper____Status* right);
static void __ignis_user_main(void);
boolean Wrapper____Status____equals(struct Wrapper____Status* self, struct Wrapper____Status* other);

#line 23 "test.ign"
static boolean same_ref_Wrapper__Status_ref_Wrapper__Status_bool(struct Wrapper____Status* left, struct Wrapper____Status* right) {
    // Locals
    struct Wrapper____Status* l0; // left
    struct Wrapper____Status* l1; // right

    // Temporaries
    struct Wrapper____Status* t0;
    struct Wrapper____Status* t1;
    struct Wrapper____Status* t2;
    struct Wrapper____Status* t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = Wrapper____Status____equals(t2, t3);
    return t4;
}

#line 101 "<generated-c>"

#line 27 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    struct Wrapper____Status l0; // left
    struct Status l1; // _
    struct Wrapper____Status l2; // right
    struct Status l3; // _
    boolean l4; // _same

    // Temporaries
    struct Status* t0;
    struct Status t1;
    struct Wrapper____Status* t2;
    struct Status* t3;
    struct Status t4;
    struct Wrapper____Status* t5;
    struct Wrapper____Status* t6;
    struct Wrapper____Status* t7;
    boolean t8;

entry_0:
    t0 = &l1;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->tag = 0;
    t1 = l1;
    t2 = &l0;
    __builtin_memset((void*)t2, 0, sizeof(*t2));
(t2)->field_0 = t1;
    t3 = &l3;
    __builtin_memset((void*)t3, 0, sizeof(*t3));
(t3)->tag = 0;
    t4 = l3;
    t5 = &l2;
    __builtin_memset((void*)t5, 0, sizeof(*t5));
(t5)->field_0 = t4;
    t6 = &l0;
    t7 = &l2;
    t8 = same_ref_Wrapper__Status_ref_Wrapper__Status_bool(t6, t7);
    l4 = t8;
    return;
}

#line 145 "<generated-c>"

#line 18 "test.ign"
boolean Wrapper____Status____equals(struct Wrapper____Status* self, struct Wrapper____Status* other) {
    // Locals
    struct Wrapper____Status* l0; // self
    struct Wrapper____Status* l1; // other

    // Temporaries
    struct Wrapper____Status* t0;
    struct Wrapper____Status* t1;

entry_0:
    l0 = self;
    l1 = other;
    return true;
}

#line 163 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
