crates/ignis_codegen_c/tests/snapshots/golden_c__c_builtin_eq_primitives_and_str.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include <string.h>
#include "types.h"

static boolean sameNumber_ref_i32_ref_i32_bool(i32* left, i32* right);
static boolean sameText_ref_str_ref_str_bool(const char** left, const char** right);
static void __ignis_user_main(void);

#line 2 "test.ign"
static boolean sameNumber_ref_i32_ref_i32_bool(i32* left, i32* right) {
    // Locals
    i32* l0; // left
    i32* l1; // right

    // Temporaries
    i32* t0;
    i32* t1;
    i32* t2;
    i32* t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = *(i32*)(t2) == *(i32*)(t3);
    return t4;
}

#line 89 "<generated-c>"

#line 6 "test.ign"
static boolean sameText_ref_str_ref_str_bool(const char** left, const char** right) {
    // Locals
    const char** l0; // left
    const char** l1; // right

    // Temporaries
    const char** t0;
    const char** t1;
    const char** t2;
    const char** t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = strcmp(*(const char**)(t2), *(const char**)(t3)) == 0;
    return t4;
}

#line 113 "<generated-c>"

#line 10 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    i32 l0; // leftNumber
    i32 l1; // rightNumber
    const char* l2; // leftText
    const char* l3; // rightText
    boolean l4; // _numberEqual
    boolean l5; // _textEqual

    // Temporaries
    i32* t0;
    i32* t1;
    boolean t2;
    const char** t3;
    const char** t4;
    boolean t5;

entry_0:
    l0 = 7;
    l1 = 7;
    l2 = "same";
    l3 = "same";
    t0 = &l0;
    t1 = &l1;
    t2 = sameNumber_ref_i32_ref_i32_bool(t0, t1);
    l4 = t2;
    t3 = &l2;
    t4 = &l3;
    t5 = sameText_ref_str_ref_str_bool(t3, t4);
    l5 = t5;
    return;
}

#line 149 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
