crates/ignis_codegen_c/tests/snapshots/golden_c__c_builtin_eq_record_instance.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Pair Pair;

// Type definitions
struct Pair {
    i32 field_0;
};

boolean Pair_equals(struct Pair* self, struct Pair* other);
static boolean same_ref_Pair_ref_Pair_bool(struct Pair* left, struct Pair* right);
static void __ignis_user_main(void);

#line 9 "test.ign"
boolean Pair_equals(struct Pair* self, struct Pair* other) {
    // Locals
    struct Pair* l0; // self
    struct Pair* l1; // other

    // Temporaries
    struct Pair* t0;
    struct Pair* t1;
    struct Pair* t2;
    i32* t3;
    i32 t4;
    struct Pair* t5;
    i32* t6;
    i32 t7;
    boolean t8;

entry_0:
    l0 = self;
    l1 = other;
    t2 = l0;
    t3 = &((t2)->field_0);
    t4 = *t3;
    t5 = l1;
    t6 = &((t5)->field_0);
    t7 = *t6;
    t8 = t4 == t7;
    return t8;
}

#line 104 "<generated-c>"

#line 14 "test.ign"
static boolean same_ref_Pair_ref_Pair_bool(struct Pair* left, struct Pair* right) {
    // Locals
    struct Pair* l0; // left
    struct Pair* l1; // right

    // Temporaries
    struct Pair* t0;
    struct Pair* t1;
    struct Pair* t2;
    struct Pair* t3;
    boolean t4;

entry_0:
    l0 = left;
    l1 = right;
    t2 = l0;
    t3 = l1;
    t4 = Pair_equals(t2, t3);
    return t4;
}

#line 128 "<generated-c>"

#line 18 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    struct Pair l0; // left
    struct Pair l1; // right
    boolean l2; // _same

    // Temporaries
    struct Pair* t0;
    struct Pair* t1;
    struct Pair* t2;
    struct Pair* t3;
    boolean t4;

entry_0:
    t0 = &l0;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->field_0 = 1;
    t1 = &l1;
    __builtin_memset((void*)t1, 0, sizeof(*t1));
(t1)->field_0 = 1;
    t2 = &l0;
    t3 = &l1;
    t4 = same_ref_Pair_ref_Pair_bool(t2, t3);
    l2 = t4;
    return;
}

#line 158 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
