crates/ignis_codegen_c/tests/snapshots/golden_c__c_closure_struct_record_param_by_value_ordering.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
assertion_line: 1093
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Point Point;
typedef struct Handlers Handlers;

// Closure types
struct __closure_env_11 {
    char _empty;
};
#ifndef IGNIS_TYPE_DEF___IGNIS_CLOSURE_POINT_I32
#define IGNIS_TYPE_DEF___IGNIS_CLOSURE_POINT_I32
struct __ignis_closure_Point_i32 {
    i32 (*call)(u8*, struct Point);
    void (*drop_fn)(u8*);
    u8* env;
};
#endif // IGNIS_TYPE_DEF___IGNIS_CLOSURE_POINT_I32

// Type definitions
struct Point {
    i32 field_0;
    i32 field_1;
};
struct Handlers {
    struct __ignis_closure_Point_i32 field_0;
};

static i32 __ignis_user_main(void);
static i32 ____closure__thunk__0_ptr_u8_Point_i32(u8* ____closure__env__0, struct Point p);

#line 11 "test.ign"
static i32 __ignis_user_main(void) {
    // Locals
    struct Handlers l0; // h
    struct __ignis_closure_Point_i32 l1; // f
    struct Point l2; // _

    // Temporaries
    struct __ignis_closure_Point_i32 t0;
    struct Handlers* t1;
    struct Handlers* t2;
    struct __ignis_closure_Point_i32* t3;
    struct __ignis_closure_Point_i32 t4;
    struct __ignis_closure_Point_i32 t5;
    struct Point* t6;
    struct Point t7;
    i32 t8;

entry_0:
    struct __closure_env_11 __env_t0;
    t0 = (struct __ignis_closure_Point_i32){ (i32(*)(u8*, struct Point))____closure__thunk__0_ptr_u8_Point_i32, NULL, (u8*)&__env_t0 };
    t1 = &l0;
    __builtin_memset((void*)t1, 0, sizeof(*t1));
(t1)->field_0 = t0;
    t2 = &l0;
    t3 = &((t2)->field_0);
    t4 = *t3;
    l1 = t4;
    t5 = l1;
    t6 = &l2;
    __builtin_memset((void*)t6, 0, sizeof(*t6));
(t6)->field_0 = 20;
    (t6)->field_1 = 22;
    t7 = l2;
    t8 = t5.call(t5.env, t7);
    return t8;
}

#line 129 "<generated-c>"

#line 12 "test.ign"
static i32 ____closure__thunk__0_ptr_u8_Point_i32(u8* ____closure__env__0, struct Point p) {
    // Locals
    u8* l0; // __closure_env_0
    struct Point l1; // p

    // Temporaries
    u8* t0;
    struct Point t1;
    struct Point* t2;
    i32* t3;
    i32 t4;
    struct Point* t5;
    i32* t6;
    i32 t7;
    i32 t8;

entry_0:
    l0 = ____closure__env__0;
    l1 = p;
    t2 = &l1;
    t3 = &((t2)->field_0);
    t4 = *t3;
    t5 = &l1;
    t6 = &((t5)->field_1);
    t7 = *t6;
    t8 = t4 + t7;
    return t8;
}

#line 161 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    return __ignis_user_main();
}
