crates/ignis_codegen_c/tests/snapshots/golden_c__c_drop_glue_inner_explicit_drop.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include "types.h"

// Type forward declarations
typedef struct Managed Managed;
typedef struct Container Container;

// Type definitions
struct Managed {
    i32 field_0;
    uint8_t __ignis_drop_state;
};
struct Container {
    struct Managed field_0;
    i32 field_1;
};

void Managed_drop(struct Managed* self);
static void __ignis_user_main(void);

#line 6 "test.ign"
void Managed_drop(struct Managed* self) {
    // Locals
    struct Managed* l0; // self

    // Temporaries
    struct Managed* t0;

entry_0:
    l0 = self;
    return;
}

#line 92 "<generated-c>"

#line 16 "test.ign"
static void __ignis_user_main(void) {
    // Locals
    struct Container l0; // c
    struct Managed l1; // _

    // Mark droppable locals as uninitialized until their first store
    __builtin_memset((void*)&l0, 0, sizeof(l0));
    l0.field_0.__ignis_drop_state = 1;
    __builtin_memset((void*)&l1, 0, sizeof(l1));
    l1.__ignis_drop_state = 1;

    // Temporaries
    struct Managed* t0;
    struct Managed t1;
    struct Container* t2;

entry_0:
    t0 = &l1;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->field_0 = 99;
    (t0)->__ignis_drop_state = 0;
    t1 = l1;
    t2 = &l0;
    __builtin_memset((void*)t2, 0, sizeof(*t2));
(t2)->field_0 = t1;
    (t2)->field_1 = 1;
    if (!(l0.field_0).__ignis_drop_state) {
    Managed_drop(&l0.field_0);
    (l0.field_0).__ignis_drop_state = 1;
}
    return;
}

#line 128 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    __ignis_user_main();
    return 0;
}
