crates/ignis_codegen_c/tests/snapshots/golden_c__c_drop_glue_multiple_string_fields.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

// Type forward declarations
typedef struct Person Person;

// Type definitions
struct Person {
    string field_0;
    string field_1;
    i32 field_2;
};

int main(void);

int main(void) {
    // Locals
    struct Person l0; // p

    // Temporaries
    struct Person* t0;

entry_0:
    t0 = &l0;
    (t0)->field_0 = ignis_string_from_cstr("John");
    (t0)->field_1 = ignis_string_from_cstr("Doe");
    (t0)->field_2 = 30;
    ignis_string_drop(l0.field_0);
ignis_string_drop(l0.field_1);
    return 0;
}
